[project]
name = "ep-ztf-xmatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "pandas>=2.2.3",
    "penquins>=2.4.2",
    "requests>=2.32.3",
    "supervisor>=4.2.5",
    "astropy",
]
